<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:text="@string/contact_form"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginHorizontal="@dimen/medium_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_size"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/medium_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_size"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_email_24"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_size"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_phone_24"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:hint="@string/phone"
                android:inputType="phone"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:hint="@string/area"
                android:inputType="number"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/medium_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_section_size"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="0.1"
                android:layout_gravity="top"
                android:src="@drawable/ic_baseline_location_on_24"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/small_margin"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address"
                    android:inputType="textEmailAddress"
                    android:gravity="top"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/small_margin"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:text="@string/settings_form"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/medium_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_size"
                android:text="@string/toggle"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginHorizontal="@dimen/medium_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_size"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:textSize="@dimen/subtitle_size"
                    android:textColor="@color/black"
                    android:text="@string/cellular_data"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/small_margin"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/small_margin"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_size"
                android:text="@string/single_check"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginHorizontal="@dimen/medium_margin"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:layout_marginVertical="@dimen/small_margin">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_notifications"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_off_notifications"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_size"
                android:text="@string/multiple_checks"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginHorizontal="@dimen/medium_margin"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/microphone_access"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginHorizontal="@dimen/medium_margin"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery_access"
                android:layout_marginHorizontal="@dimen/medium_margin"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_access"
                android:layout_marginHorizontal="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/small_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_size"
                android:text="@string/buttons"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginHorizontal="@dimen/medium_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_size"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="#6290FF"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:text="@string/cancel"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="#6290FF"
                    android:layout_marginTop="@dimen/small_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginEnd="@dimen/medium_margin"
                    android:text="@string/ok"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>